--- a/index.html
+++ b/index.html
@@ -1,1 +1,236 @@
-000
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>知識王挑戰</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+
+        #quiz-container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 90%;
+            max-width: 600px;
+            text-align: center;
+        }
+
+        h1 {
+            color: #007bff;
+        }
+
+        #question-display {
+            font-size: 1.5em;
+            margin-bottom: 20px;
+            padding: 15px;
+            background-color: #e6f7ff;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+
+        #options-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr; /* 兩欄佈局 */
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+
+        .option-btn {
+            padding: 15px;
+            font-size: 1.1em;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .option-btn:hover:not(:disabled) {
+            background-color: #0056b3;
+        }
+
+        .option-btn:disabled {
+            cursor: not-allowed;
+            opacity: 0.6;
+        }
+
+        #result-message {
+            font-size: 1.2em;
+            font-weight: bold;
+            margin-bottom: 20px;
+            min-height: 25px; /* 確保結果訊息有空間顯示 */
+        }
+
+        #next-btn {
+            padding: 10px 20px;
+            font-size: 1em;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        #next-btn:hover {
+            background-color: #1e7e34;
+        }
+    </style>
+</head>
+<body>
+
+    <div id="quiz-container">
+        <h1>知識王挑戰賽 👑</h1>
+        
+        <div id="question-display">
+            問題載入中...
+        </div>
+        
+        <div id="options-container">
+            </div>
+
+        <div id="result-message">
+            </div>
+
+        <button id="next-btn" style="display: none;">下一題</button>
+    </div>
+
+    <script>
+        // 1. 儲存你的問題 (題庫)
+        const questions = [
+            {
+                question: "地球上最高的山峰是？",
+                options: ["聖母峰", "K2", "富士山", "馬特洪峰"],
+                correctAnswer: "聖母峰" 
+            },
+            {
+                question: "HTML 的全名是？",
+                options: ["Hyper Text Markup Language", "High Tech Modern Language", "Home Tool Markup Language", "Hyperlink and Text Markup Language"],
+                correctAnswer: "Hyper Text Markup Language"
+            },
+            {
+                question: "哪一種動物是最大的藍色動物？",
+                options: ["大象", "藍鯨", "長頸鹿", "河馬"],
+                correctAnswer: "藍鯨"
+            },
+            {
+                question: "水在攝氏零度時的狀態是？",
+                options: ["氣態", "液態", "固態", "等離子態"],
+                correctAnswer: "固態"
+            }
+        ];
+
+        let currentQuestionIndex = 0; // 追蹤目前是第幾題
+        let score = 0;               // 追蹤得分
+
+        // 抓取 HTML 元素
+        const questionEl = document.getElementById('question-display');
+        const optionsContainerEl = document.getElementById('options-container');
+        const resultMessageEl = document.getElementById('result-message');
+        const nextBtn = document.getElementById('next-btn');
+
+        // 2. 顯示問題和選項的函數
+        function displayQuestion() {
+            // 檢查是否還有問題
+            if (currentQuestionIndex >= questions.length) {
+                showFinalScore();
+                return;
+            }
+
+            const currentQ = questions[currentQuestionIndex];
+            questionEl.textContent = `第 ${currentQuestionIndex + 1} 題: ${currentQ.question}`; 
+            optionsContainerEl.innerHTML = ''; // 清空舊的選項
+
+            // 建立選項按鈕
+            currentQ.options.forEach(optionText => {
+                const button = document.createElement('button');
+                button.textContent = optionText;
+                button.classList.add('option-btn');
+                // 為每個按鈕添加點擊事件監聽器
+                button.addEventListener('click', () => checkAnswer(optionText, currentQ.correctAnswer, button));
+                optionsContainerEl.appendChild(button);
+            });
+
+            resultMessageEl.textContent = ''; // 清空結果訊息
+            nextBtn.style.display = 'none'; // 隱藏下一題按鈕
+        }
+
+        // 3. 檢查答案的函數
+        function checkAnswer(selectedOption, correctAnswer, clickedButton) {
+            // 禁用所有選項按鈕，防止重複點擊
+            document.querySelectorAll('.option-btn').forEach(btn => {
+                btn.disabled = true;
+                btn.style.opacity = '0.5'; // 變暗未選擇的按鈕
+            });
+
+            if (selectedOption === correctAnswer) {
+                score++;
+                resultMessageEl.textContent = '🎉 答對了！';
+                resultMessageEl.style.color = 'green';
+                clickedButton.style.backgroundColor = '#28a745'; // 正確答案顯示綠色
+                clickedButton.style.opacity = '1';
+            } else {
+                resultMessageEl.textContent = `❌ 答錯了！正確答案是：${correctAnswer}`;
+                resultMessageEl.style.color = 'red';
+                clickedButton.style.backgroundColor = '#dc3545'; // 錯誤答案顯示紅色
+                clickedButton.style.opacity = '1';
+
+                // 標示出正確答案
+                document.querySelectorAll('.option-btn').forEach(btn => {
+                    if (btn.textContent === correctAnswer) {
+                        btn.style.backgroundColor = '#17a2b8'; // 正確答案標示為藍色
+                        btn.style.opacity = '1';
+                    }
+                });
+            }
+
+            nextBtn.style.display = 'block'; // 顯示下一題按鈕
+        }
+
+        // 4. 處理下一題的點擊事件
+        nextBtn.addEventListener('click', () => {
+            currentQuestionIndex++;
+            displayQuestion(); // 載入下一題
+        });
+
+        // 顯示最終得分
+        function showFinalScore() {
+            questionEl.textContent = '挑戰結束！';
+            optionsContainerEl.innerHTML = '';
+            resultMessageEl.innerHTML = `你的最終得分是：**${score} / ${questions.length}** 題！`;
+            resultMessageEl.style.color = 'blue';
+            resultMessageEl.style.fontSize = '1.8em';
+
+            nextBtn.textContent = '重新開始';
+            nextBtn.style.display = 'block';
+            nextBtn.onclick = () => { // 點擊重新開始時重置遊戲
+                currentQuestionIndex = 0;
+                score = 0;
+                displayQuestion();
+                nextBtn.textContent = '下一題';
+                nextBtn.onclick = null; // 移除重新開始的事件處理
+                nextBtn.addEventListener('click', () => {
+                    currentQuestionIndex++;
+                    displayQuestion();
+                }, { once: true }); // 重新綁定正常的下一題事件
+            };
+        }
+
+        // 遊戲開始！
+        displayQuestion();
+    </script>
+
+</body>
+</html>
